--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-API_URL=https://www.doodive.com
-API_TOKEN=false
+API_URL=https://www.doodive.com/
+API_TOKEN=615fe340-9e1f-40b6-9949-1290692313c4
 MEDIA_SERVER_MEDIA=https://media.doodive.com/media/
 MEDIA_SERVER_DOODIVE_DEFAULT=https://media.doodive.com/default/doodive/
 
