--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-av": "^10.2.0",
     "expo-blur": "~11.0.0",
     "expo-font": "~10.0.4",
+    "expo-image-picker": "^13.1.1",
     "expo-linear-gradient": "~11.0.0",
     "expo-localization": "~12.0.0",
     "expo-react-native-modalbox": "^2.2.5",
@@ -44,7 +45,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-i18next": "^11.15.1",
-    "react-native": "0.64.3",
+    "react-native": "^0.64.3",
     "react-native-animatable": "^1.3.3",
     "react-native-animated-splash-screen": "^2.0.5",
     "react-native-dialog": "^9.2.0",
@@ -57,14 +58,18 @@
     "react-native-modalbox": "^2.0.2",
     "react-native-modalize": "^2.0.13",
     "react-native-navigation": "^7.24.3",
+    "react-native-onboarding-swiper": "^1.2.0",
     "react-native-paper": "^4.11.1",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-shared-element": "^0.8.4",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "react-navigation-shared-element": "^3.1.3",
+    "react-redux": "^8.0.1",
+    "redux": "^4.2.0",
     "rn-keyboard-sticky-view": "^1.0.4",
     "styled-components": "^5.3.3"
   },
