--- a/package.json
+++ b/package.json
@@ -12,16 +12,21 @@
     "@expo-google-fonts/dev": "^0.2.0",
     "@expo-google-fonts/open-sans": "^0.2.0",
     "@expo-google-fonts/poppins": "^0.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@freakycoder/react-native-helpers": "^1.0.2",
     "@mindinventory/react-native-tab-bar-interaction": "github:mindinventory/react-native-tab-bar-interaction",
+    "@react-native-community/slider": "^4.2.2",
     "@react-native-masked-view/masked-view": "0.2.6",
     "@react-native-seoul/masonry-list": "^1.1.4",
     "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "axios": "^0.24.0",
     "babel-plugin-inline-dotenv": "^1.6.0",
+    "babel-plugin-macros": "^3.1.0",
+    "base-64": "^1.0.0",
     "components": "^0.1.0",
     "dotenv": "^10.0.0",
     "expo": "^44.0.0",
@@ -55,6 +60,7 @@
     "react-native-lightning-modal": "^2.0.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-localize": "^2.1.6",
+    "react-native-modal": "^13.0.1",
     "react-native-modalbox": "^2.0.2",
     "react-native-modalize": "^2.0.13",
     "react-native-navigation": "^7.24.3",
@@ -64,9 +70,11 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-shared-element": "^0.8.4",
+    "react-native-side-menu": "^1.1.3",
     "react-native-status-bar-height": "^2.6.0",
-    "react-native-vector-icons": "^9.0.0",
+    "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
+    "react-native-webview": "^11.18.2",
     "react-navigation-shared-element": "^3.1.3",
     "react-redux": "^8.0.1",
     "redux": "^4.2.0",
