--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@dudigital/react-native-zoomable-view": "^1.1.3",
     "@expo-google-fonts/dev": "^0.2.0",
     "@expo-google-fonts/open-sans": "^0.2.0",
     "@expo-google-fonts/poppins": "^0.2.0",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@freakycoder/react-native-helpers": "^1.0.2",
     "@mindinventory/react-native-tab-bar-interaction": "github:mindinventory/react-native-tab-bar-interaction",
+    "@react-native-community/netinfo": "^8.3.0",
     "@react-native-community/slider": "^4.2.2",
     "@react-native-masked-view/masked-view": "0.2.6",
     "@react-native-seoul/masonry-list": "^1.1.4",
