--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@freakycoder/react-native-helpers": "^1.0.2",
     "@mindinventory/react-native-tab-bar-interaction": "github:mindinventory/react-native-tab-bar-interaction",
-    "@react-native-community/netinfo": "^8.3.0",
-    "@react-native-community/slider": "^4.2.2",
+    "@react-native-community/netinfo": "7.1.3",
+    "@react-native-community/slider": "4.1.12",
     "@react-native-masked-view/masked-view": "0.2.6",
     "@react-native-seoul/masonry-list": "^1.1.4",
     "@react-navigation/bottom-tabs": "^6.0.9",
@@ -25,24 +25,30 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
+    "@unimodules/core": "~7.2.0",
+    "@unimodules/react-native-adapter": "~6.5.0",
     "axios": "^0.24.0",
     "babel-plugin-inline-dotenv": "^1.6.0",
     "babel-plugin-macros": "^3.1.0",
     "base-64": "^1.0.0",
     "components": "^0.1.0",
     "dotenv": "^10.0.0",
-    "expo": "^44.0.0",
-    "expo-app-loading": "~1.3.0",
-    "expo-av": "^10.2.0",
+    "expo": "^44.0.6",
+    "expo-av": "~10.2.0",
     "expo-blur": "~11.0.0",
+    "expo-core": "^3.0.1",
     "expo-font": "~10.0.4",
-    "expo-image-picker": "^13.1.1",
-    "expo-linear-gradient": "~11.0.0",
+    "expo-font-interface": "^3.0.0",
+    "expo-image-loader-interface": "^3.0.0",
+    "expo-image-picker": "~12.0.1",
+    "expo-linear-gradient": "~11.0.3",
     "expo-localization": "~12.0.0",
+    "expo-react-native-adapter": "^3.0.1",
     "expo-react-native-modalbox": "^2.2.5",
     "expo-secure-store": "~11.1.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
+    "fbjs": "^3.0.4",
     "i18n-js": "^3.8.0",
     "i18next": "^21.6.2",
     "i18next-browser-languagedetector": "^6.1.2",
@@ -52,9 +58,10 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-i18next": "^11.15.1",
-    "react-native": "^0.64.3",
+    "react-native": "0.64.3",
     "react-native-animatable": "^1.3.3",
     "react-native-animated-splash-screen": "^2.0.5",
+    "react-native-canvas": "^0.1.38",
     "react-native-dialog": "^9.2.0",
     "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "~2.1.0",
@@ -71,12 +78,12 @@
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-shared-element": "^0.8.4",
+    "react-native-shared-element": "0.8.3",
     "react-native-side-menu": "^1.1.3",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
-    "react-native-webview": "^11.18.2",
+    "react-native-webview": "11.15.0",
     "react-navigation-shared-element": "^3.1.3",
     "react-redux": "^8.0.1",
     "redux": "^4.2.0",
