--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-plugin-inline-dotenv": "^1.6.0",
     "babel-plugin-macros": "^3.1.0",
     "base-64": "^1.0.0",
+    "buffer": "^5.7.1",
     "components": "^0.1.0",
     "dotenv": "^10.0.0",
     "expo": "^44.0.6",
@@ -40,6 +41,7 @@
     "expo-font": "~10.0.4",
     "expo-font-interface": "^3.0.0",
     "expo-image-loader-interface": "^3.0.0",
+    "expo-image-manipulator": "~10.2.0",
     "expo-image-picker": "~12.0.1",
     "expo-linear-gradient": "~11.0.3",
     "expo-localization": "~12.0.0",
@@ -49,6 +51,7 @@
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "fbjs": "^3.0.4",
+    "gl-react-expo": "^5.0.0",
     "i18n-js": "^3.8.0",
     "i18next": "^21.6.2",
     "i18next-browser-languagedetector": "^6.1.2",
@@ -81,6 +84,7 @@
     "react-native-shared-element": "0.8.3",
     "react-native-side-menu": "^1.1.3",
     "react-native-status-bar-height": "^2.6.0",
+    "react-native-unimodules": "^0.7.0",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
     "react-native-webview": "11.15.0",
